--- a/test/password.yaml
+++ b/test/password.yaml
@@ -3,6 +3,10 @@ kind: Secret
 metadata:
   name: test-db-password
 data:
-  # 这是base64后的结果，k8s会自动从base64转回来
+  # 在创建 secret 对象时，data 字段需要用 "base64" 编码
+  # 这是 base64 后的结果，k8s 会自动从 base64 转回来
+  # 以下使用 linux 命令行执行
+  # echo -n "123456" | base64
+  # echo "MTIzNDU2Cg==" | base64 --decode
   # 所以连接数据库时，只需要填写原密码就行。
-  PASSWORD: "MTIzNDU2Cg=="  # 原密码: 123456
+  PASSWORD: "MTIzNDU2Cg==" # 原密码: 123456
