--- a/yaml/deploy_docker.yaml
+++ b/yaml/deploy_docker.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         # 容器启动顺序应该在代码层面保证
         - name: mysqltest  # 数据库镜像
-          image: mysql:5.7
+          image: mariadb:10.5
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3306
