--- a/yaml/example.yaml
+++ b/yaml/example.yaml
@@ -3,23 +3,26 @@ kind: DbConfig
 metadata:
   name: mydbconfig
 spec:
-  dsn: root:123456@tcp(127.0.0.1:3306)/
-  maxIdleConn: 10
+  dsn: root:1234567@tcp(127.0.0.1:3306)/               # db 连接的 <user>:<password>@tcp(<ip:port>)/
+  maxIdleConn: 11                                      # 最大空闲连接数，可不填，默认为 10
+  maxOpenConn: 100                                     # 最大连接数，可不填，默认为 100
   services:
     - service:
-        user: testuser             # 用户名
-        password: test-db-password # secret 名，用于db用户的密码，用户需要先创建secret资源，并在此指定
-        dbname: test               # db名
-        tables: test-db-table      # configmap名，用于创建表，用户需要先创建configmap资源，并在此指定
+        user: dbconfig_service1                        # 用户名
+        password_secret: dbconfig-service1-secret      # secret 名，设置 db 用户的密码，用户需要先创建 secret 资源，并在此指定
+        dbname: dbconfig_service1                      # db 名
+        tables_configmap: dbconfig-service1-configmap  # configmap 名，设置创建表，用户需要先创建 configmap 资源，并在此指定
+        rebuild: true                                  # rebuild 字段 可以在 db 中已经创建完成后，需要重新创建时使用, ex: 表新增字段
     - service:
-        user: testuser1111
-        password: test-db-password
-        dbname: test1111
-        tables: test-db-table
+        user: dbconfig_service2
+        password_secret: dbconfig-service2-secret
+        dbname: dbconfig_service2
+        tables_configmap: dbconfig-service2-configmap
+        rebuild: true
     - service:
-        user: myuser
-        password: test-db-password
-        dbname: mytest
-        tables: test-db-table-example
-        rebuild: true               # 是否重新建立
+        user: dbconfig_service3
+        password_secret: dbconfig-service3-secret
+        dbname: dbconfig_service3
+        tables_configmap: dbconfig-service3-configmap
+
 
