feat: 重构，支持引入多个cr资源创建与删除的功能

--- a/app.yaml
+++ b/app.yaml
@@ -1,22 +1,5 @@
-Dsn: root:1234567@tcp(127.0.0.1:3306)/
-MaxIdleConn: 11
-MaxOpenConn: 100
-Services:
-- Service:
-    Dbname: dbconfig_service1
-    Password: dbconfig-service1-secret
-    ReBuild: true
-    Tables: dbconfig-service1-configmap
-    User: dbconfig_service1
-- Service:
-    Dbname: dbconfig_service2
-    Password: dbconfig-service2-secret
-    ReBuild: true
-    Tables: dbconfig-service2-configmap
-    User: dbconfig_service2
-- Service:
-    Dbname: dbconfig_service3
-    Password: dbconfig-service3-secret
-    ReBuild: false
-    Tables: dbconfig-service3-configmap
-    User: dbconfig_service3
+# 目前已经废弃此配置文件功能
+Dsn: ""
+MaxIdleConn: 0
+MaxOpenConn: 0
+Services: []
