--- a/yaml/crd-example/service1.yaml
+++ b/yaml/crd-example/service1.yaml
@@ -6,6 +6,7 @@ metadata:
 data:
   # 下面填写创建 mysql 表的 sql 语句
   runoob.table: |
+    DROP TABLE IF EXISTS `runoob_tbl`;
     CREATE TABLE IF NOT EXISTS runoob_tbl(
     runoob_id INT UNSIGNED AUTO_INCREMENT,
     runoob_title VARCHAR(100) NOT NULL,
