feat: fix configmapRef secretRef field

--- a/yaml/example1.yaml
+++ b/yaml/example1.yaml
@@ -4,25 +4,26 @@ metadata:
   name: mydbconfig-3
 spec:
   dsn: root:123456@tcp(127.0.0.1:3306)/               # db 连接的 <user>:<password>@tcp(<ip:port>)/
-  maxIdleConn: 10                                      # 最大空闲连接数，可不填，默认为 10
-  maxOpenConn: 120                                     # 最大连接数，可不填，默认为 100
+  maxIdleConn: 10                                     # 最大空闲连接数，可不填，默认为 10
+  maxOpenConn: 120                                    # 最大连接数，可不填，默认为 100
   services:
-    - service:
-        user: mydbconfig3_service1_user1               # 用户名
-        password_secret: dbconfig-service1-secret      # secret 名，设置 db 用户的密码，用户需要先创建 secret 资源，并在此指定
-        dbname: mydbconfig3_service1_db1               # db 名
-        tables_configmap: dbconfig-service1-configmap  # configmap 名，设置创建表，用户需要先创建 configmap 资源，并在此指定
-        rebuild: true                                  # rebuild 字段 可以在 db 中已经创建完成后，需要重新创建时使用, ex: 表新增字段
-    - service:
-        user: mydbconfig3_service2_user2
-        password_secret: dbconfig-service2-secret
-        dbname: mydbconfig3_service2_db2
-        tables_configmap: dbconfig-service2-configmap
-        rebuild: true
-    - service:
-        user: mydbconfig3_service3_user3
-        password_secret: dbconfig-service3-secret
-        dbname: mydbconfig3_service3_db3
-        tables_configmap: dbconfig-service3-configmap
+    - user: mydbconfig3_service1_user1                # 用户名
+      password:
+        secretRef: dbconfig-service1-secret           # secret 名，设置 db 用户的密码，用户需要先创建 secret 资源，并在此指定
+      dbname: mydbconfig3_service1_db1                # db 名
+      tables:
+        configMapRef: dbconfig-service1-configmap     # configmap 名，设置创建表，用户需要先创建 configmap 资源，并在此指定
+    - user: mydbconfig3_service2_user2
+      password:
+        secretRef: dbconfig-service2-secret
+      dbname: mydbconfig3_service2_db2
+      tables:
+        configMapRef: dbconfig-service2-configmap
+    - user: mydbconfig3_service3_user3
+      password:
+        secretRef: dbconfig-service3-secret
+      dbname: mydbconfig3_service3_db3
+      tables:
+        configMapRef: dbconfig-service3-configmap
 
 
