--- a/yaml/example.yaml
+++ b/yaml/example.yaml
@@ -3,26 +3,27 @@ kind: DbConfig
 metadata:
   name: mydbconfig-2
 spec:
-  dsn: root:123456@tcp(127.0.0.1:3306)/               # db 连接的 <user>:<password>@tcp(<ip:port>)/
+  dsn: root:123456@tcp(127.0.0.1:3306)/                # db 连接的 <user>:<password>@tcp(<ip:port>)/
   maxIdleConn: 15                                      # 最大空闲连接数，可不填，默认为 10
   maxOpenConn: 100                                     # 最大连接数，可不填，默认为 100
   services:
-    - service:
-        user: dbconfig_servicetest1                    # 用户名
-        password_secret: dbconfig-service1-secret      # secret 名，设置 db 用户的密码，用户需要先创建 secret 资源，并在此指定
-        dbname: dbconfig_servicetest1                  # db 名
-        tables_configmap: dbconfig-service1-configmap  # configmap 名，设置创建表，用户需要先创建 configmap 资源，并在此指定
-        rebuild: true                                  # rebuild 字段 可以在 db 中已经创建完成后，需要重新创建时使用, ex: 表新增字段
-    - service:
-        user: dbconfig_service22test
-        password_secret: dbconfig-service2-secret
-        dbname: dbconfig_service22test
-        tables_configmap: dbconfig-service2-configmap
-        rebuild: true
-    - service:
-        user: dbconfig_service33tttt
-        password_secret: dbconfig-service3-secret
-        dbname: dbconfig_service33tttt
-        tables_configmap: dbconfig-service3-configmap
+    - user: dbconfig_servicetest1                      # 用户名
+      password:
+        secretRef: dbconfig-service1-secret            # secret 名，设置 db 用户的密码，用户需要先创建 secret 资源，并在此指定
+      dbname: dbconfig_servicetest1                    # db 名
+      tables:
+        configMapRef: dbconfig-service1-configmap      # configmap 名，设置创建表，用户需要先创建 configmap 资源，并在此指定
+    - user: dbconfig_service22test
+      password:
+        secretRef: dbconfig-service2-secret
+      dbname: dbconfig_service22test
+      tables:
+        configMapRef: dbconfig-service2-configmap
+    - user: dbconfig_service33tttt
+      password:
+        secretRef: dbconfig-service3-secret
+      dbname: dbconfig_service33tttt
+      tables:
+        configMapRef: dbconfig-service3-configmap
 
 
